# techniques_de_test_2025_2026

./: .coverage  Makefile  README.md  pyproject.toml
TP/: PLAN.md
docs/triangulator/: api.html  index.html  serialisation.html  triangles.html  triangulation.html
src/triangulator/: api.py  serialisation.py  triangles.py  triangulation.py
src/triangulator.egg-info/: PKG-INFO  SOURCES.txt
tests/connection/: test_api.py
tests/integration/: test_api.py
tests/performance/: test_perf.py
tests/unit/: test_serialisation.py  test_triangles.py  test_triangulation.py
