[project]
name = "triangulator"
version = "0.1.0"
description = "Micro-service de triangulation pour le TP de tests"
requires-python = ">=3.10"

# Aucune dépendance externe non autorisée.
dependencies = [
    "flask"
]

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/connection"
]

markers = [
    "perf: tests de performance"
]


[tool.ruff]
select = ["E", "F", "W"]
exclude = [
    ".venv",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

